# ralph

./: .editorconfig  .env  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TEST_REPORT.md  UX_EVALUATION_REPORT.md  VERIFICATION_REPORT.md  index.html  launch-dev.ps1  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  release-notes.md  vite.config.ts
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.playwright-cli/ralph-audit-20260430/: 01_initial_state.md  04_onboarding_step1.md
.trae/rules/: Ralph.md
.trae/skills/deploy-to-github-pages/: SKILL.md
.trae/skills/github-search-discovery/: SKILL.md
.trae/skills/ralph-playwright-a11y-scan/: SKILL.md
.trae/skills/ralph-playwright-test-e2e/: SKILL.md
.trae/skills/shader-dev/: README.md  SKILL.md
docs/: api.md
docs/superpowers/plans/: 2026-05-03-comprehensive-advancement.md
e2e/: app.spec.ts  debug.cjs  minimal.spec.ts  performance.spec.ts  run-e2e.cjs  run-perf.cjs
false/ralph_core-14goytd3mml3o/s-hi687m75hu-1a8ceyw-3dt52p7syza7wg0m5r417jlkd/: metadata.rmeta
false/ralph_core-3n4ajni2wtj53/s-hi680vjoh4-1xsgy7l-afdhcpvk4lqqpqsf9gj5bf5fh/: metadata.rmeta
false/ralph_lib-3ctl86r5bs8zg/s-hi687ndsys-0cux7qw-ewcls6zx2o9eizd28meqte4yk/: metadata.rmeta
src/: App.tsx  index.css  main.tsx  types.ts
src-cli/: Cargo.toml  main.rs
src-core/: Cargo.toml
src-core/src/: database.rs  deep_analysis.rs  discovery.rs  evaluator.rs  evaluator_tests.rs  github.rs  github_tests.rs  integration_tests.rs  lib.rs  security_tests.rs  trend_analysis.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: badge.rs  lib.rs  main.rs
src/components/: BadgeDisplay.tsx  ComparisonPanel.tsx  ConfidenceBadge.tsx  ErrorBoundary.tsx  EvaluationHistory.tsx  ExportPanel.tsx  FavoritesManager.tsx  KeyboardHelpModal.tsx  LoadingSpinner.tsx  OnboardingGuide.tsx  PDFExport.tsx  PipelineVisualization.tsx  ProjectDetail.tsx  ReportShare.tsx  ResultCard.tsx  ResultsSkeleton.tsx  SearchBar.tsx  SearchHistory.tsx  StatsDashboard.tsx  TrendChart.tsx  TrendingDiscovery.tsx  TrustBadge.tsx  VirtualList.tsx
src/components/features/: EmptyState.tsx
src/components/layout/: ErrorFallback.tsx  Header.tsx
src/components/ui/: AccessibleModal.tsx
src/hooks/: useCompareMode.ts  useFilteredResults.ts  useKeyboardShortcuts.ts  useNotification.ts  useOfflineSync.ts  useSearch.ts  useTheme.ts
src/i18n/: index.ts  index.tsx
src/lib/: escape-stack.ts  export-formats.ts  filter-utils.ts  focus-trap.tsx  offline-storage.ts  telemetry.ts
src/services/: tauri.ts
src/stores/: useAppStore.ts
src/stores/slices/: favoriteSlice.ts  filterSlice.ts  uiSlice.ts
src/test/: globalSetup.ts  patchedTestUtils.ts  setup.ts
src/test/components/: AccessibleModal.test.tsx  BadgeDisplay.test.tsx  ComparisonPanel.test.tsx  ConfidenceBadge.test.tsx  EmptyState.test.tsx  ErrorBoundary.test.tsx  ErrorFallback.test.tsx  EvaluationHistory.test.tsx  ExportPanel.test.tsx  FavoritesManager.test.tsx  Header.test.tsx  KeyboardHelpModal.test.tsx  LoadingSpinner.test.tsx  OnboardingGuide.test.tsx  PDFExport.test.tsx  ProjectDetail.test.tsx  ReportShare.test.tsx  ResultCard.test.tsx  ResultsSkeleton.test.tsx  SearchBar.test.tsx  SearchHistory.test.tsx  StatsDashboard.test.tsx  TrendChart.test.tsx  TrendingDiscovery.test.tsx  TrustBadge.test.tsx  VirtualList.test.tsx
src/test/hooks/: useCompareMode.test.tsx  useFilteredResults.test.ts  useKeyboardShortcuts.test.ts  useNotification.test.ts  (+2 more)
src/types/: shortcuts.ts
(+16 files in other folders)
