[package]
name = "ralph-cli"
version = "0.8.0"
edition = "2021"
description = "Ralph CLI - GitHub 高质量项目发现与评估工具命令行接口"
license = "MIT"
repository = "https://github.com/yourusername/ralph"
homepage = "https://github.com/yourusername/ralph#readme"
readme = "../README.md"
keywords = ["github", "evaluation", "assessment", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Ralph Team <ralph@example.com>"]
rust-version = "1.70"

[[bin]]
name = "ralph"
path = "main.rs"

[dependencies]
ralph-core = { path = "../src-core" }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
